CJAL-16/11/2018-Corrección bugs

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
@@ -41,7 +41,7 @@
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href=@Url.Action("Inicio", "Home")><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item">Compras</li>
-                                <li class="breadcrumb-item">Ordern de Compra</li>
+                                <li class="breadcrumb-item">Orden de Compra</li>
                                 <li class="breadcrumb-item">Nueva</li>
                             </ul>
                         </div>
@@ -152,7 +152,7 @@
             <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="title" id="ModalConfirmacionLabel">¿Esta seguro?</h4>
+                        <h4 class="title" id="ModalConfirmacionLabel">¿Está seguro?</h4>
                     </div>
                     <div class="modal-footer">
                         <input type="submit" value="Si" id="btnCrear" class="btn btn-raised btn-primary btn-round" />
@@ -166,12 +166,12 @@
                 <div class="modal-dialog modal-lg" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="title" id="ModalCancelarLabel">Motivo de cancelcion</h4>
+                            <h4 class="title" id="ModalCancelarLabel">Motivo de cancelación</h4>
                         </div>
                         <div class="modal-body">
                             <div class="body">
                                 <div class="col-sm-12">
-                                    <asp:TextBox ID="txtMotivoCancela" TextMode="MultiLine" CssClass="form-control tex" Rows="5" placeholder="Cual es el motivo de la cancelacion..."></asp:TextBox>
+                                    <asp:TextBox ID="txtMotivoCancela" TextMode="MultiLine" CssClass="form-control tex" Rows="5" placeholder="Cual es el motivo de la cancelación..."></asp:TextBox>
                                 </div>
                             </div>
                         </div>
