--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplemento.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplemento.cshtml
@@ -38,7 +38,7 @@
                         <ul class="breadcrumb padding-0">
                             <li class="breadcrumb-item"><a href=@Url.Action("Inicio", "Home")><i class="zmdi zmdi-home"></i></a></li>
                             <li class="breadcrumb-item">Compras</li>
-                            <li class="breadcrumb-item">Ordern de Compra</li>
+                            <li class="breadcrumb-item">Orden de Compra</li>
                             <li class="breadcrumb-item">Complemento</li>
                         </ul>
                     </div>
