--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplementoGas.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplementoGas.cshtml
@@ -62,10 +62,10 @@
                                         <b>Número de Requisición: </b> @Model.NumeroRequisicion
                                     </div>
                                     <div>
-                                        <b>Numero de Orden de Compra Expedidor: </b> @Model.OrdenCompraExpedidor.NumOrdenCompra
+                                        <b>Número de Orden de Compra Expedidor: </b> @Model.OrdenCompraExpedidor.NumOrdenCompra
                                     </div>
                                     <div>
-                                        <b>Numero de Orden de Compra Porteador: </b> @Model.OrdenCompraPorteador.NumOrdenCompra
+                                        <b>Número de Orden de Compra Porteador: </b> @Model.OrdenCompraPorteador.NumOrdenCompra
                                     </div>
                                 </div>
                             </div>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="card">
                     <div class="header">
-                        Informacion de la <strong>descarga</strong>
+                        Información de la <strong>descarga</strong>
                     </div>
                     <div class="body">
                         <div class="panel-group" id="accordion_1" role="tablist" aria-multiselectable="true">
@@ -271,7 +271,7 @@
                                                     </div>
                                                     <div class="col-md-4">
                                                         <div class="form-group">
-                                                            <label>Capasidad (Ltr) tanque tractor:</label>
+                                                            <label>Capacidad (Ltr) tanque tractor:</label>
                                                             @Html.TextBoxFor(m => m.CapacidadTanque, new { @class = "form-control", @onchange = "javascript: CalcularKilosFinales();" })
                                                             @Html.ValidationMessageFor(m => m.CapacidadTanque, "", new { @class = "alert-danger" })
                                                         </div>
@@ -342,7 +342,7 @@
                                             <div class="row clearfix">
                                                 <div class="col-md-3 content-center">
                                                     <div class="form-group">
-                                                        <label>% Magnatel Almacen</label>
+                                                        <label>% Magnatel Almacén</label>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-3">
@@ -430,7 +430,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-md-3 form-control-label">
-                                                        <label for="txtReferenciaPormedioMensualGallon">(En dolares)</label>
+                                                        <label for="txtReferenciaPormedioMensualGallon">(En dólares)</label>
                                                     </div>
                                                 </div>
                                                 <div class="row clearfix">
@@ -444,7 +444,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-md-3 form-control-label">
-                                                        <label for="txtTarifaServicioGallon">(En dolares)</label>
+                                                        <label for="txtTarifaServicioGallon">(En dólares)</label>
                                                     </div>
                                                 </div>
                                                 <div class="row clearfix">
@@ -479,7 +479,7 @@
                                                 </div>
                                                 <div class="row clearfix">
                                                     <div class="col-md-4 form-control-label">
-                                                        <label for="txtFactorConvercionGaL">Factor de convercion Galones a litros:</label>
+                                                        <label for="txtFactorConvercionGaL">Factor de conversión Galones a litros:</label>
                                                     </div>
                                                     <div class="col-md-4">
                                                         <div class="form-group">
@@ -504,7 +504,7 @@
                                                 </div>
                                                 <div class="row clearfix">
                                                     <div class="col-md-4 form-control-label">
-                                                        <label for="txtFactorConvercionaKg">Factor de conversion a Kilogramos:</label>
+                                                        <label for="txtFactorConvercionaKg">Factor de conversión a Kilogramos:</label>
                                                     </div>
                                                     <div class="col-md-4">
                                                         <div class="form-group">
@@ -742,7 +742,7 @@
                                 <div class="panel-heading" role="tab" id="headingImagenes">
                                     <h4 class="panel-title">
                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_1" href="#collapseImagenes" aria-expanded="false"
-                                           aria-controls="collapseImagenes">Imagenes</a>
+                                           aria-controls="collapseImagenes">Imágenes</a>
                                     </h4>
                                 </div>
                                 <div id="collapseImagenes" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingImagenes">
