--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionRevision.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionRevision.cshtml
@@ -42,7 +42,7 @@
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item">Requisición</li>
-                                <li class="breadcrumb-item">Revisición</li>
+                                <li class="breadcrumb-item">Revisión</li>
                             </ul>
                         </div>
                     </div>
@@ -125,8 +125,8 @@
                                                         <td><b>Unidad</b></td>
                                                         <td><b>Aplicación</b></td>
                                                         <td><b>Centro de Costo</b></td>
-                                                        <td><b>Almacen</b></td>
-                                                        <td><b>Revision Fisica</b></td>
+                                                        <td><b>Almacén</b></td>
+                                                        <td><b>Revisión Fisica</b></td>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -137,7 +137,7 @@
                                     </div>
                                     <div class="row clearfix">
                                         <div class="col-lg-12">
-                                            <strong>Opinión de Almacen</strong>
+                                            <strong>Opinión de Almacén</strong>
                                             <div class="row clearfix ">
                                                 <div class="col-sm-12 blockquote blockquote-info btn-round">
                                                     <div class="form-group">
@@ -202,7 +202,7 @@
             <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="title" id="ModalConfirmacionLabel">¿Esta seguro?</h4>
+                        <h4 class="title" id="ModalConfirmacionLabel">¿Está seguro?</h4>
                     </div>
                     <div class="modal-footer">
                         <input id="btnFinalizar" type="submit" value="Si" class="btn btn-raised btn-primary btn-round waves-effect" />
