--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Roles/Index.cshtml
@@ -12,7 +12,6 @@
         $(window).on("load", showNotification('alert-success', message, 'top', 'center', '', ''));
     }
 </script>
-<script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
 <script type="text/javascript">
     //$(function () {
     //    $('#empresas').on('change', function () {
@@ -207,50 +206,50 @@
                                                         <th>Insertar Usuario</th>
                                                         <th>Modificar Usuario</th>
                                                         <th>Eliminar Usuario</th>
-                                                        <th>Consultar Usua</th>
-                                                        <th>CatInsertarProveedor</th>
-                                                        <th>CatEliminarProveedor</th>
-                                                        <th>CatConsultarProveedor</th>
-                                                        <th>CatModificarProveedor</th>
-                                                        <th>CatInsertarProducto</th>
-                                                        <th>CatModificarProducto</th>
-                                                        <th>CatEliminarProducto</th>
-                                                        <th>CatConsultarProducto</th>
-                                                        <th>CatInsertarCentroCosto</th>
-                                                        <th>CatModificarCentroCosto</th>
-                                                        <th>CatEliminarCentroCosto</th>
-                                                        <th>CatConsultarCentroCosto</th>
-                                                        <th>CatInsertarCuentaContable</th>
-                                                        <th>CatModificarCuentaContable</th>
-                                                        <th>CatEliminarCuentaContable</th>
-                                                        <th>CatConsultarCuentaContable</th>
-                                                        <th>CatInsertarCliente</th>
-                                                        <th>CatModificarCliente</th>
-                                                        <th>CatEliminarCliente</th>
-                                                        <th>CatConsultarCliente</th>
-                                                        <th>CatAsignarChoferPuntoVenta</th>
-                                                        <th>CatEliminarPuntoVenta</th>
-                                                        <th>CatConsultarPuntoVenta</th>
-                                                        <th>CatAsignarEquipoTransporte</th>
-                                                        <th>CatModificarEquipoTransporte</th>
-                                                        <th>CatEliminarEquipoTransporte</th>
-                                                        <th>CatConsultarEquipoTransporte</th>
-                                                        <th>CatInsertarEmpresa</th>
-                                                        <th>CatModificarEmpresa</th>
-                                                        <th>CatEliminarEmpresa</th>
-                                                        <th>CatConsultarEmpresa</th>
-                                                        <th>CatInsertarRol</th>
-                                                        <th>CatModificarRol</th>
-                                                        <th>CatEliminarRol</th>
-                                                        <th>CatConsultarRol</th>
-                                                        <th>CatInsertarPrecioVentaGas</th>
-                                                        <th>CatModificarPrecioVentaGas</th>
-                                                        <th>CatEliminarPrecioVentaGas</th>
-                                                        <th>CatConsultarPrecioVentaGas</th>
-                                                        <th>CatInsertarPrecioVenta</th>
-                                                        <th>CatModificarPrecioVenta</th>
-                                                        <th>CatEliminarPrecioVenta</th>
-                                                        <th>CatConsultarPrecioVenta</th>
+                                                        <th>Consultar Usuario</th>
+                                                        <th>Insertar Proveedor</th>
+                                                        <th>Eliminar Proveedor</th>
+                                                        <th>Consultar Proveedor</th>
+                                                        <th>Modificar Proveedor</th>
+                                                        <th>Insertar Producto</th>
+                                                        <th>Modificar Producto</th>
+                                                        <th>Eliminar Producto</th>
+                                                        <th>Consultar Producto</th>
+                                                        <th>Insertar Centro Costo</th>
+                                                        <th>Modificar Centro Costo</th>
+                                                        <th>Eliminar Centro Costo</th>
+                                                        <th>Consultar Centro Costo</th>
+                                                        <th>Insertar Cuenta Contable</th>
+                                                        <th>Modificar Cuenta Contable</th>
+                                                        <th>Eliminar Cuenta Contable</th>
+                                                        <th>Consultar Cuenta Contable</th>
+                                                        <th>Insertar Cliente</th>
+                                                        <th>Modificar Cliente</th>
+                                                        <th>Eliminar Cliente</th>
+                                                        <th>Consultar Cliente</th>
+                                                        <th>Asignar Chofer Punto Venta</th>
+                                                        <th>Eliminar Punto Venta</th>
+                                                        <th>Consultar Punto Venta</th>
+                                                        <th>Asignar Equipo Transporte</th>
+                                                        <th>Modificar Equipo Transporte</th>
+                                                        <th>Eliminar Equipo Transporte</th>
+                                                        <th>Consultar Equipo Transporte</th>
+                                                        <th>Insertar Empresa</th>
+                                                        <th>Modificar Empresa</th>
+                                                        <th>Eliminar Empresa</th>
+                                                        <th>Consultar Empresa</th>
+                                                        <th>Insertar Rol</th>
+                                                        <th>Modificar Rol</th>
+                                                        <th>Eliminar Rol</th>
+                                                        <th>Consultar Rol</th>
+                                                        <th>Insertar Precio Venta Gas</th>
+                                                        <th>Modificar Precio Venta Gas</th>
+                                                        <th>Eliminar Precio Venta Gas</th>
+                                                        <th>Consultar Precio Venta Gas</th>
+                                                        <th>Insertar Precio Venta</th>
+                                                        <th>Modificar Precio Venta</th>
+                                                        <th>Eliminar Precio Venta</th>
+                                                        <th>Consultar Precio Venta</th>
                                                         <th>Acciones</th>
                                                     </tr>
                                                 </thead>
@@ -262,7 +261,7 @@
                                     </div>
                                 </div>
                                 <div id="MovilCatalogo" class="tab-pane">
-                                    <i>Movil Catalogo sin datos para mostrar</i>
+                                    <i>Movil Catálogo sin datos para mostrar</i>
                                 </div>
                             </div>
                             <!--Compra tab content-->
@@ -275,21 +274,23 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="blockquote-info blockquote btn-round">
-                                        <div class="table-responsive" id="divgvwCompra">
+
+                                    <div class="blockquote-info blockquote btn-round" id="divgvwCompra">
+                                        @*<div class="blockquote-info blockquote btn-round">*@
+                                        <div class="table-responsive">
                                             <table class="table table-striped table-hover">
                                                 <thead>
                                                     <tr>
                                                         <th>Rol</th>
-                                                        <th>CompraVerOCompra</th>
-                                                        <th>CompraGenerarOCompra</th>
-                                                        <th>CompraAutorizarOCompra</th>
-                                                        <th>CompraEntraProductoOCompra</th>
-                                                        <th>CompraAtiendeServicioOCompra</th>
-                                                        <th>CompraCancelaOCompra</th>
-                                                        <th>AlmacenActualizaExistencias</th>
-                                                        <th>AlmacenVerExistencias</th>
-                                                        <th>AlmacenVerMovimientos</th>
+                                                        <th>Ver Orden Compra</th>
+                                                        <th>Generar Orden Compra</th>
+                                                        <th>Autorizar Orden Compra</th>
+                                                        <th>Entra Producto Orden Compra</th>
+                                                        <th>Atiende Servicio Orden Compra</th>
+                                                        <th>Cancela Orden Compra</th>
+                                                        <th>Almacén Actualiza Existencias</th>
+                                                        <th>Almacén Ver Existencias</th>
+                                                        <th>Almacén Ver Movimientos</th>
                                                         <th>Acciones</th>
                                                     </tr>
                                                 </thead>
@@ -314,26 +315,26 @@
                                                 <thead>
                                                     <tr>
                                                         <th>Rol</th>
-                                                        <th>AppCompraVerOCompra</th>
-                                                        <th>AppCompraEntraGas</th>
-                                                        <th>AppCompraGasIniciarDescarga</th>
-                                                        <th>AppCompraGasFinalizarDescarga</th>
-                                                        <th>AppAutoconsumoInventarioGral</th>
-                                                        <th>AppAutoconsumoEstacionCarb</th>
-                                                        <th>AppAutoconsumoPipa</th>
-                                                        <th>AppCalibracionEstacionCarb</th>
-                                                        <th>AppCalibracionPipa</th>
-                                                        <th>AppCalibracionCamionetaCilindro</th>
-                                                        <th>AppRecargaEstacionCarb</th>
-                                                        <th>AppRecargaPipa</th>
-                                                        <th>AppRecargaCamionetaCilindro</th>
-                                                        <th>AppTomaLecturaAlmacenPral</th>
-                                                        <th>AppTomaLecturaEstacionCarb</th>
-                                                        <th>AppTomaLecturaPipa</th>
-                                                        <th>AppTomaLecturaCamionetaCilindro</th>
-                                                        <th>AppTomaLecturaReporteDelDia</th>
-                                                        <th>AppTraspasoEstacionCarb</th>
-                                                        <th>AppTraspasoPipa</th>
+                                                        <th>App Ver Orden Compra</th>
+                                                        <th>App Compra Entra Gas</th>
+                                                        <th>App Compra Gas Iniciar Descarga</th>
+                                                        <th>App Compra Gas Finalizar Descarga</th>
+                                                        <th>App Autoconsumo Inventario Gral</th>
+                                                        <th>App Autoconsumo Estación Carb</th>
+                                                        <th>App Autoconsumo Pipa</th>
+                                                        <th>App Calibracion Estación Carb</th>
+                                                        <th>App Calibracion Pipa</th>
+                                                        <th>App Calibracion Camioneta Cilindro</th>
+                                                        <th>App Recarga Estación Carb</th>
+                                                        <th>App Recarga Pipa</th>
+                                                        <th>App Recarga Camioneta Cilindro</th>
+                                                        <th>App Toma Lectura AlmacenPral</th>
+                                                        <th>App Toma Lectura Estación Carb</th>
+                                                        <th>App Toma Lectura Pipa</th>
+                                                        <th>App Toma Lectura Camioneta Cilindro</th>
+                                                        <th>App Toma Lectura Reporte Del Día</th>
+                                                        <th>App Traspaso Estación Carb</th>
+                                                        <th>App Traspaso Pipa</th>
                                                         <th>Acciones</th>
                                                     </tr>
                                                 </thead>
@@ -379,10 +380,10 @@
                                                 <thead>
                                                     <tr>
                                                         <th>Rol</th>
-                                                        <th>RequisicionVerRequisiciones</th>
-                                                        <th>RequisicionGenerarNueva</th>
-                                                        <th>RequisicionRevisarExistencia</th>
-                                                        <th>RequisicionAutorizar</th>
+                                                        <th>Ver Requisiciones</th>
+                                                        <th>Generar Nueva Requisición</th>
+                                                        <th>Revisar Existencia Requisición</th>
+                                                        <th>Autorizar Requisición</th>
                                                         <th>Acciones</th>
                                                     </tr>
                                                 </thead>
