--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/UnidadMedidaDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/UnidadMedidaDTO.cshtml
@@ -4,13 +4,13 @@
     <td>@Model.Acronimo </td>
     <td>@Model.Descripcion </td>    
     <td>
-        <a href="@Url.Action("EditarUnidadMedida", "Producto", new { Id = Model.IdUnidadMedida })">
+        <a href="@Url.Action("EditarUnidadMedida", "Producto", new { Id = Model.IdUnidadMedida })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="material-icons">edit</i>
-            <span class="icon-name"></span>
+            <span>Editar unidad medida</span>
         </a>
-        <a href="@Url.Action("EliminarUnidadMedida", "Producto", new { Id = Model.IdUnidadMedida })">
+        <a href="@Url.Action("EliminarUnidadMedida", "Producto", new { Id = Model.IdUnidadMedida })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="material-icons">delete</i>
-            <span class="icon-name"></span>
+            <span>Eliminar unidad medida</span>
         </a>
     </td>
 </tr>
