--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/EntradaMercancia.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/EntradaMercancia.cshtml
@@ -27,7 +27,7 @@
                             <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
                             <li class="breadcrumb-item active">Compras</li>
                             <li class="breadcrumb-item active">Orden de Compra</li>
-                            <li class="breadcrumb-item active">Entrada de Mercancia</li>
+                            <li class="breadcrumb-item active">Entrada de Mercancía</li>
                         </ul>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="card">
                             <div class="header">
-                                <h2><strong>Registra</strong> la entrada de mercancia</h2>
+                                <h2><strong>Registra</strong> la entrada de mercancía</h2>
                             </div>
                             <div class="body">
                                 <div class="row clearfix">
@@ -131,7 +131,7 @@
                                                     <td><b>Requeridos</b></td>
                                                     <td><b>Unidad</b></td>
                                                     <td><b>Detalle</b></td>
-                                                    <td><b>Cantidada</b></td>
+                                                    <td><b>Cantidad</b></td>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -148,7 +148,7 @@
                                     </div>
                                     <div class="col-lg-6 col-md-8 text-center">
                                         <button btn id="BtnAceptar" formaction="RegistrarEntrada" class="btn btn-primary btn-round">
-                                            Acepatar
+                                            Aceptar
                                         </button>
                                     </div>
                                 </div>
