--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraPago.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraPago.cshtml
@@ -19,7 +19,7 @@
             <div class="block-header">
                 <div class="row clearfix">
                     <div class="col-lg-5 col-md-5 col-sm-12">
-                        <h2>Confirmacion de Pago</h2>
+                        <h2>Confirmación de Pago</h2>
                         <ul class="breadcrumb padding-0">
                             <li class="breadcrumb-item"><a href=@Url.Action("Inicio", "Home")><i class="zmdi zmdi-home"></i></a></li>
                             <li class="breadcrumb-item">Compras</li>
@@ -58,7 +58,7 @@
                                         </div>
                                     </div>
                                     <div class="row clearfix">
-                                        <label>Numero de orde de compra</label>
+                                        <label>Número de orden de compra</label>
                                     </div>
                                     <div class="row clearfix text-center">
                                         <div class="form-group">
