--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionAutorizacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionAutorizacion.cshtml
@@ -111,7 +111,7 @@
                                     }
                                     <div class="row clearfix">
                                         <div class="col-lg-12">
-                                            <strong>Opinión de Almacen</strong>
+                                            <strong>Opinión de Almacén</strong>
                                             <div class="row clearfix">
                                                 <div class="col-sm-12">
                                                     <div class="form-group">
@@ -175,7 +175,7 @@
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <strong>Motivo de cancelción</strong>
+                        <strong>Motivo de cancelación</strong>
                     </div>
                     <div class="modal-body">
                         <div class="body">
@@ -201,7 +201,7 @@
             <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="title" id="ModalConfirmacionLabel">¿Esta seguro?</h4>
+                        <h4 class="title" id="ModalConfirmacionLabel">¿Está seguro?</h4>
                     </div>
                     <div class="modal-footer">
                         <input type="submit" value="Si" id="btnFinalizar" class="btn btn-raised btn-primary btn-round waves-effect" />
