--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/CategoriaProductoDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/CategoriaProductoDTO.cshtml
@@ -3,13 +3,13 @@
     <td>@Model.Nombre </td>
     <td>@Model.Descripcion </td>
     <td>
-        <a href="@Url.Action("EditarCategoria", "Producto", new { Id = Model.IdCategoria })">
+        <a href="@Url.Action("EditarCategoria", "Producto", new { Id = Model.IdCategoria })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="material-icons">edit</i>
-            <span class="icon-name"></span>
+            <span>Editar categoría</span>
         </a>
-        <a href="@Url.Action("EliminarCategoria", "Producto", new { Id = Model.IdCategoria})">
+        <a href="@Url.Action("EliminarCategoria", "Producto", new { Id = Model.IdCategoria})" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="material-icons">delete</i>
-            <span class="icon-name"></span>
+            <span>Eliminar categoría</span>
         </a>
 
     </td>
