--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/LineaProductoDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/LineaProductoDTO.cshtml
@@ -3,13 +3,13 @@
     <td>@Model.Linea </td>
     <td>@Model.Descripcion </td>
     <td>
-        <a href="@Url.Action("EditarLineaProducto", "Producto", new { Id = Model.IdProductoLinea })">
+        <a href="@Url.Action("EditarLineaProducto", "Producto", new { Id = Model.IdProductoLinea })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="material-icons">edit</i>
-            <span class="icon-name"></span>
+            <span>Editar línea producto</span>
         </a>
-        <a href="@Url.Action("EliminarLineaProducto", "Producto", new { Id = Model.IdProductoLinea})">
+        <a href="@Url.Action("EliminarLineaProducto", "Producto", new { Id = Model.IdProductoLinea})" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="material-icons">delete</i>
-            <span class="icon-name"></span>
+            <span>Eliminar línea producto</span>
         </a>
 
     </td>
